# kimi-code-desktop

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  agent.md  biome.json  index.html  package-lock.json  package.json  start-hidden.vbs  start.bat  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
capabilities/: default.json
docs/: DEVELOPMENT_STANDARD.md  RELEASE.md
docs/plans/: 2026-07-10-agent-swarm-ui.md  2026-07-14-event-ui-coverage.md  2026-07-18-v2-ui-integration.md  2026-07-18-webview2-acceptance.md  2026-07-19-generic-send-feedback.md  2026-07-22-command-result-panel-design.md  2026-07-22-model-management-ux.md  2026-07-22-single-instance.md  2026-07-23-thinking-effort-controls.md
docs/superpowers/plans/: 2026-07-18-ui-v2-monochrome-rewrite.md
docs/superpowers/specs/: 2026-07-17-kimi-design-language-upgrade-design.md  2026-07-18-ui-v2-monochrome-rewrite-design.md
scripts/: acp-smoke.mjs  build-sidecar.ps1  check-quick.mjs  check-runtime.ps1  desktop-release.ps1  focus-kimi-window.ps1  release-msi.ps1  release-preflight.ps1  run-cursor-acp-milestone0.ps1  run-cursor-plan.ps1  sign-windows.ps1  smoke-mcp-tool.mjs  sync-version.js  validate-release-manifest.ps1  verify-cursor-acp-milestone0.ps1
sidecar-adapter/: pyproject.toml
sidecar-adapter/kimi_desktop_sidecar/: __init__.py  __main__.py  api.py  windows_subprocess.py  worker.py
sidecar-adapter/tests/: test_api_helpers.py  test_windows_subprocess.py  test_worker_stdin.py
src/: App.tsx  bootstrap.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: acp.rs  acp_desktop.rs  acp_translate.rs  commands.rs  git_diff.rs  global_config.rs  lib.rs  managed_usage.rs  mcp_config.rs  notify.rs  oauth_login.rs  runtime_backend.rs  runtime_check.rs  security.rs  session_files.rs  session_store.rs  sidecar.rs  test_env.rs  tray.rs  usage_stats.rs  wire_events.rs
src-tauri/src/test-fixtures/: mcp.json
src/app/: app-shell.test.tsx  app-shell.tsx  app.tsx  empty-state.tsx
src/components/: kimi-cli-brand.tsx
src/components/ai-elements/: message.tsx  reasoning.tsx  streamdown-response.tsx
src/features/chat/: chat.tsx  (+5 more)
src/hooks/: types.ts  use-theme.ts  useGitDiffStats.ts  useGlobalConfig.ts  useSessionStream.test.tsx  useSessionStream.ts  useSessions.test.tsx  useSessions.ts  utils.ts  wireTypes.ts
src/lib/: apiClient.ts  auth.test.ts  auth.ts  config-update-toast.ts  i18n.tsx  idle-turn.test.ts  idle-turn.ts  kimi-code-link.test.ts  kimi-code-link.ts  managed-usage.test.ts  managed-usage.ts  model-capabilities.test.ts  model-capabilities.ts  runtime-readiness.test.ts  safe-url.ts  settings-api.ts  slash-command-catalog.test.ts  slash-command-catalog.ts  tauri-api.ts  usage-stats.test.ts  usage-stats.ts  utils.ts  version.test.ts  version.ts
src/ui/: button.test.tsx  button.tsx  dialog.tsx  error-boundary.tsx  icon-button.tsx  kbd.tsx  scroll-area.tsx  separator.tsx  status-pill.test.tsx  status-pill.tsx  switch.tsx  tooltip.tsx
(+91 files in other folders)
