[project]
name = "kimi-desktop-sidecar"
version = "0.1.0"
description = "Kimi Code Desktop 桌面 sidecar 适配器 / Desktop sidecar adapter for Kimi Code Desktop"
requires-python = ">=3.12"
# kimi-cli is injected at build time via .pth pointing to the local uv tool installation
dependencies = [
]

[project.scripts]
kimi-sidecar = "kimi_desktop_sidecar.__main__:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "kimi_desktop_sidecar"
module-root = ""

[dependency-groups]
dev = [
    "pyinstaller==6.18.0",
    "pytest>=9.0.1,<10",
]
