[package]
name = "kimi-code-desktop"
version = "0.1.6"
description = "Kimi Code 桌面应用 / Kimi Code Desktop App"
authors = [ "Kimi Team" ]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.78"
build = "build.rs"

[lib]
name = "app_lib"
crate-type = [ "lib", "cdylib", "staticlib" ]

[[bin]]
name = "kimi-code-desktop"
path = "src/main.rs"

[dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde_json = "1"
toml = "0.8"
md5 = "0.7"
base64 = "0.22"
mime_guess = "2"

[dependencies.tauri]
version = "2"
features = [ "tray-icon" ]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.tokio]
version = "1"
features = [ "rt-multi-thread", "time", "macros", "net", "sync" ]

[dependencies.open]
version = "5"
features = [ "shellexecute-on-windows" ]

[dependencies.ureq]
version = "2"
features = [ "json" ]

[dependencies.chrono]
version = "0.4"
default-features = false
features = [ "clock", "std" ]

[target."cfg(windows)".dependencies]
tauri-plugin-single-instance = "2"

[target."cfg(windows)".dependencies.windows]
version = "0.59"
features = [ "Win32_System_Threading", "Win32_Foundation" ]

[build-dependencies.tauri-build]
version = "2"
features = []

[dev-dependencies]
tempfile = "3"
